file path updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 		<title>VimeoThumb Extended</title>
 
-		<link rel="stylesheet" href="css/temp.css" type="text/css" />
+		<link rel="stylesheet" href="css/jquery-smartvimeoembed.css" type="text/css" />
 		
 	</head>
 
@@ -15,7 +15,7 @@
 		<img src="http://placehold.it/640x360" class="video-thumb" data-vimeo-id="53476316" />
 
 		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>	
-		<script src="jquery-smartvimeoembed.js"></script>
+		<script src="jquery-smartvimeoembed.min.js"></script>
 		<script src="local.js"></script>
 	</body>
 
