--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	
-		<title>VimeoThumb Extended</title>
+		<title>jQuery Smart Vimeo Embed</title>
 
 		<link rel="stylesheet" href="css/jquery-smartvimeoembed.css" type="text/css" />
 		
