--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		<img src="http://placehold.it/640x360" class="video-thumb" data-vimeo-id="1084537" />
 		<img src="http://placehold.it/640x360" class="video-thumb" data-vimeo-id="53476316" />
 
-		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>	
-		<script src="jquery-smartvimeoembed.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+		<script src="froogaloop.min.js"></script>
+		<script src="jquery-smartvimeoembed.js"></script>
 		<script src="local.js"></script>
 	</body>
 
